# pirate

./: .gitignore  .readthedocs.yml  ACKNOWLEDGMENTS  CMakeLists.txt  README.md  RELEASES.md  check_gaps.c  pnt_data.h
4.libpirate/: CMakeLists.txt  build.sh  ownship.h  pnt_example.cpp  run.sh
antlr/: Annotations.cpp  Annotations.hpp  BooleanErrorListener.h  BooleanErrorListener.hpp  CDRBuildTypes.cpp  CDRBuildTypes.h  CDRBuildTypes.hpp  CDRDeclareTypes.cpp  CDRDeclareTypes.h  CDRGenerator.cpp  CDRGenerator.h  CDRGenerator.hpp  CDRGeneratorMain.cpp  CDRModuleCounter.h  CDRModuleCounter.hpp  CDRTypes.cpp  CDRTypes.h  CDRTypes.hpp  CMakeLists.txt  DFDLGenerator.cpp  DFDLGenerator.hpp  IDL.g4  IDLBaseListener.cpp  IDLBaseVisitor.cpp  IDLParser.cpp  IDLParser.h  ModuleDecl.cpp  ModuleDecl.hpp  README.md  StructTypeSpec.cpp  StructTypeSpec.hpp  UnionTypeSpec.cpp  UnionTypeSpec.hpp  indent_facet.cpp  indent_facet.hpp
antlr/generated-src/: IDLBaseListener.h  IDLBaseVisitor.h  IDLLexer.cpp  IDLLexer.h  IDLListener.cpp  IDLListener.h  IDLParser.cpp  IDLParser.h  IDLVisitor.cpp  IDLVisitor.h
antlr/test/: CDRGeneratorTest.cpp
antlr/test/input/: annotations.idl  arrays.idl  enum.idl  nested.idl  pnt.idl  primitives.idl  union.idl  zero.idl
antlr/test/output/: annotations.c  arrays.c  enum.c  pnt.c  primitives.c  union.c
cusegaps/: CMakeLists.txt  README.md  cusegaps.c  cusegaps_net.c  cusegaps_pipe.c  cusegaps_test.c  fioc.h
demos/: CMakeLists.txt  build.sh
demos/camera_demo/: CMakeLists.txt  README.md  valgrind-third-party-ignore.supp
demos/camera_demo/conf/: trilliumconfig.txt
demos/camera_demo/openlayers_demo/: README.md  angular.json  karma.conf.js  package-lock.json  package.json  tsconfig.json
demos/camera_demo/scripts/: camera_demo.sh  update_udev_rules.sh
demos/camera_demo/src/: basecameracontroloutput.cpp  basecameracontroloutput.hpp  baseorientationoutput.cpp  baseorientationoutput.hpp  binary-us-map.h  cameracontrolinput.hpp  cameracontrolinputcreator.hpp  cameracontroloutput.cpp  cameracontroloutput.hpp  cameracontroloutputcreator.hpp  camerademo-serialization.hpp  camerademo-serialization.idl  cameraorientation.hpp  camerazoom.hpp  colortracking.cpp  colortracking.hpp  colortrackingenclave.cpp  fileframeprocessor.cpp  fileframeprocessor.hpp  frameprocessor.cpp  (+69 more)
demos/challenge/: CMakeLists.txt  README.md  base64.c  base64.h  challenge_async.cpp  challenge_baseline.c  challenge_baseline_decrypt.c  challenge_baseline_encrypt.c  challenge_multithreaded.c  challenge_pubsub_encrypt1.cpp  challenge_pubsub_encrypt2.cpp  challenge_pubsub_main.cpp  challenge_rpc.grpc.pb.cc  challenge_rpc.grpc.pb.h  challenge_rpc.pb.cc  challenge_rpc.pb.h  challenge_rpc.proto  challenge_rpc_encrypt1.cpp  challenge_rpc_encrypt2.cpp  challenge_rpc_main.cpp  challenge_socket_common.c  challenge_socket_common.h  challenge_socket_encrypt1.c  challenge_socket_encrypt2.c  challenge_socket_main.c  challenge_spaghetti.c  tweetnacl.c  tweetnacl.h
demos/channel_demo/: CMakeLists.txt  README.md
demos/cxx_demo/: CMakeLists.txt  reader.cpp  writer.cpp
demos/enclave_demo/: CMakeLists.txt  enclave.c
demos/lld-demo/: README.md  lld-demo.c
demos/pnt_demo/: README.md  README.txt
demos/simple_demo/: CMakeLists.txt  gaps_wrapper.c
demos/time_demo/: CMakeLists.txt  README.md
demos/word_filter/: CMakeLists.txt  README.md  filter.c
devices/cusegaps/: CMakeLists.txt  cusegaps_net.c  cusegaps_pipe.c  cusegaps_test.c
libpirate/: CMakeLists.txt  README.md  bench.py  channel_funcs.c  channel_funcs.h  channel_mgmt.c  checksum.c  checksum.h  device.c  device.h  ge_eth.c  ge_eth.h  libpirate.h  libpirate.hpp  libpirate_internal.h  mercury.c  mercury.h  mercury_cntl.c  mercury_cntl.h  multiplex.c  multiplex.h  pipe.c  pipe.h  pirate_common.c  pirate_common.h  primitives.c  primitives.h  serial.c  serial.h  shmem.c  shmem.h  shmem_buffer.h  shmem_interface.c  shmem_interface.h  shmem_udp.c  shmem_udp.h  shmem_udp_interface.c  shmem_udp_interface.h  stats.c  tcp_socket.c  (+17 more)
libpirate/bench/: README.md  bench.py  bench_lat.h  bench_lat1.c  bench_lat2.c  bench_lat_common.c  bench_thr.h  bench_thr_common.c  bench_thr_reader.c  bench_thr_writer.c  convert.sh  plot.Rhistory  primitives_bench.c  primitives_bench_lat.c  primitives_bench_lat_percentiles.c  primitives_bench_thr.c  primitives_bench_thr_vector.c
libpirate/include/: libpirate.h  libpirate.hpp
libpirate/test/: channel_test.cpp  channel_test.hpp  common_test.cpp  cross_platform_test.hpp  device_test.cpp  ge_eth_test.c  ge_eth_test.cpp  ge_eth_test.h  mercury_test.c  mercury_test.cpp  mercury_test.h  multiplex_test.cpp  pipe_test.cpp  primitives_test.c  serial_test.c  serial_test.cpp  serial_test.h  shmem_test.c  shmem_test.cpp  shmem_test.h  shmem_udp_test.c  shmem_udp_test.h  tcp_socket_test.cpp  udp_shmem_test.cpp  udp_socket_test.cpp  uio_test.c  uio_test.cpp  uio_test.h  unix_seqpacket_test.cpp  unix_socket_test.cpp  windows_port.hpp  yield_test.cpp  yield_test.cxx
libpirate/windows/: channel_funcs.h  ge_eth.c  ge_eth.h  libpirate.h  libpirate_internal.h  pirate_common.c  pirate_common.h  primitives.c  udp_socket.c  udp_socket.h  windows_port.h
libpirategetopt/: CMakeLists.txt  resource.hpp  resource_loader.cpp  wrapped_array.hpp
libpirategetopt/include/: resource_loader.hpp
object-model/: CMakeLists.txt  Channel.cpp  Channel.hpp  demo.yaml  main.cpp  message.hpp  message.idl
pal/: .gitignore  CMakeLists.txt
pal/lib/: pal.c
pal/src/: handle_apps.c  handle_apps.h  handlers.c  handlers.h  launch.c  launch.h  log.c  log.h  main.c  pal  yaml.c  yaml.h
simple_demo/: CMakeLists.txt  common.h  demo.c  gaps_wrapper.c  high.c  index.filtered.html  integration_test.py  low.c  tiny.c  tiny.h
time_demo/: CMakeLists.txt  README.md
time_demo/conf/: tsa.conf  tsa_ca.conf
time_demo/include/: common.h  gaps_packet.h  ts_crypto.h
time_demo/scripts/: add_udev_rules.sh  gaps.rules  ts_test.sh  ts_verify.sh
time_demo/src/: common.c  gaps_packet.c  planner.c  sensor_manager.c  signing_proxy.c  signing_service.c  ts_crypto.c  ts_test.c
(+542 files in other folders)
